--- a/services/fastapi-app/compose.yml
+++ b/services/fastapi-app/compose.yml
@@ -1,8 +1,25 @@
 ---
 services:
-  fastapi-app:
-    container_name: fastapi-app
-    image: ghcr.io/daniel-mizsak/vps-setup
+  traefik:
+    image: traefik:v3.1
+    command:
+      - "--providers.docker"
     ports:
       - "80:80"
+      - "443:443"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /etc/traefik/:/etc/traefik/
+
+  fastapi-app:
+    container_name: fastapi-app
+    image: ghcr.io/daniel-mizsak/fastapi-app
+    labels:
+      - "traefik.enabled=true"
+      - "traefik.http.routers.app.rule=Host(`mlops.top`)"
+      - "traefik.http.routest.app.entrypoint=websecure"
+      - "traefik.http.routest.app.tls.certresolver=production"
+    deploy:
+      mode: replicated
+      replicas: 3
     restart: unless-stopped
