--- a/ansible/files/traefik.yml
+++ b/ansible/files/traefik.yml
@@ -17,7 +17,7 @@ entryPoints:
 certificatesResolvers:
   production:
     acme:
-      email: your-email@example.com
+      email: info@pythonvilag.hu
       storage: /etc/traefik/certs/acme.json
       tlsChallenge: {}
 
