--- a/services/fastapi-app/compose.yml
+++ b/services/fastapi-app/compose.yml
@@ -14,10 +14,10 @@ services:
   fastapi-app:
     image: ghcr.io/daniel-mizsak/fastapi-app:latest
     labels:
-      - "traefik.enabled=true"
+      - "traefik.enable=true"
       - "traefik.http.routers.app.rule=Host(`mlops.top`)"
-      - "traefik.http.routest.app.entrypoint=websecure"
-      - "traefik.http.routest.app.tls.certresolver=production"
+      - "traefik.http.routers.app.entrypoints=websecure"
+      - "traefik.http.routers.app.tls.certresolver=production"
     deploy:
       mode: replicated
       replicas: 3
