--- a/ansible/files/traefik.yml
+++ b/ansible/files/traefik.yml
@@ -15,7 +15,7 @@ entryPoints:
     address: :443
 
 certificatesResolvers:
-  production:
+  staging:
     acme:
       email: info@pythonvilag.hu
       storage: /etc/traefik/certs/acme.json
