--- a/ansible/files/traefik.yml
+++ b/ansible/files/traefik.yml
@@ -3,6 +3,10 @@ global:
   checkNewVersion: true
   sendAnonymousUsage: false
 
+api:
+  dashboard: true
+  insecure: true
+
 entryPoints:
   web:
     address: :80
