Update initial setup task

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,3 +4,4 @@ interpreter_python = /usr/bin/python3
 inventory = ./inventory.ini
 private_key_file = ~/.ssh/id_hostinger
 remote_user = ansible
+# remote_user = root
