--- a/ansible/fastapi-app-setup-k3s.yml
+++ b/ansible/fastapi-app-setup-k3s.yml
@@ -37,7 +37,7 @@
     # Traefik
     - name: Copy traefik extra helm config
       ansible.builtin.copy:
-        src: files/k3s/traefik-config.yaml
+        src: files/traefik/traefik-config.yaml
         dest: /var/lib/rancher/k3s/server/manifests/traefik-config.yaml
         owner: root
         group: root
@@ -47,8 +47,8 @@
     - name: Create fastapi-app directory
       ansible.builtin.file:
         path: /fastapi-app
-        owner: root
-        group: root
+        owner: "{{ user_name }}"
+        group: "{{ user_name }}"
         mode: "0755"
         state: directory
 
@@ -56,8 +56,8 @@
       ansible.builtin.copy:
         src: files/k3s/deployment.yaml
         dest: /fastapi-app/deployment.yaml
-        owner: root
-        group: root
+        owner: "{{ user_name }}"
+        group: "{{ user_name }}"
         mode: "0644"
 
     - name: Apply fastapi-app deployment
