--- a/ansible/files/docker/compose.yml
+++ b/ansible/files/docker/compose.yml
@@ -22,10 +22,22 @@ services:
     image: ghcr.io/daniel-mizsak/fastapi-app:latest
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.fastapi-app.rule=Host(`mlops.top`)"
+      - "traefik.http.routers.fastapi-app.rule=Host(`fastapi.mlops.top`)"
       - "traefik.http.routers.fastapi-app.entrypoints=websecure"
       - "traefik.http.routers.fastapi-app.tls.certresolver=production"
       - "com.centurylinklabs.watchtower.enable=true"
+    deploy:
+      mode: replicated
+      replicas: 3
+    restart: unless-stopped
+
+  nginx:
+    image: docker.io/library/nginx:latest
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.nginx.rule=Host(`nginx.mlops.top`)"
+      - "traefik.http.routers.nginx.entrypoints=websecure"
+      - "traefik.http.routers.nginx.tls.certresolver=production"
     deploy:
       mode: replicated
       replicas: 3
