--- a/ansible/fastapi-app-setup-podman.yml
+++ b/ansible/fastapi-app-setup-podman.yml
@@ -83,27 +83,12 @@
         mode: "0644"
       register: fastapi_app_compose
 
-    - name: Check if the fastapi-app container is running
-      containers.podman.podman_container_info:
-        name: fastapi-app
-      register: fastapi_app_container
-
-    - name: Debug fastapi-app container status
-      ansible.builtin.debug:
-        var: fastapi_app_container
-
-    - name: Restart fastapi-app container
-      ansible.builtin.command: >
-        podman-compose -f /fastapi-app/compose.yml restart
-      when: fastapi_app_compose.changed and not fastapi_app_container.stderr
-      changed_when: true
-      become: false
-
+    # TODO: Add compose restart policy if the compose file changed
     - name: Start fastapi-app container
       ansible.builtin.command: >
         podman-compose -f /fastapi-app/compose.yml up -d
-      when: fastapi_app_container.stderr
-      changed_when: true
+      when: true
+      changed_when: fastapi_app_compose.changed
       become: false
 
 # TODO: Watchtower is not working:
